# movie-recommender

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  INDEX.md  INSTALL.bat  INSTALL.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb
src/: config.py  logger.py
src/api/: main.py
src/data/: loader.py
src/features/: build_features.py
src/models/: matriz_factorization.py  predict.py  train_model.py
tests/: test_data.py
